.repair-init/repo/test/e2e_env/universal/envoyconfig/testdata/sidecars/meshloadbalancingstrategy/outbound-la-affinitytags.demo-client.golden.json
{
  "diff": [
    {
      "op": "add",
      "path": "/type.googleapis.com~1envoy.config.cluster.v3.Cluster/kri_msvc_envoyconfig_kuma-3__test-server_80/commonLbConfig",
      "value": {
        "localityWeightedLbConfig": {}
      }
    },
    {
      "op": "add",
      "path": "/type.googleapis.com~1envoy.config.endpoint.v3.ClusterLoadAssignment/kri_msvc_envoyconfig_kuma-3__test-server_80/endpoints/0/loadBalancingWeight",
      "value": 1
    },
    {
      "op": "add",
      "path": "/type.googleapis.com~1envoy.config.endpoint.v3.ClusterLoadAssignment/kri_msvc_envoyconfig_kuma-3__test-server_80/policy",
      "value": {
        "overprovisioningFactor": 200
      }
    }
  ],
  "xds": {
    "type.googleapis.com/envoy.config.cluster.v3.Cluster": {
      "kri_msvc_envoyconfig_kuma-3__demo-client_3000": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "edsClusterConfig": {
          "edsConfig": {
            "ads": {},
            "resourceApiVersion": "V3"
          }
        },
        "name": "kri_msvc_envoyconfig_kuma-3__demo-client_3000",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "alpnProtocols": [
                "kuma"
              ],
              "combinedValidationContext": {
                "defaultValidationContext": {
                  "matchTypedSubjectAltNames": [
                    {
                      "matcher": {
                        "exact": "spiffe://envoyconfig/demo-client"
                      },
                      "sanType": "URI"
                    }
                  ]
                },
                "validationContextSdsSecretConfig": {
                  "name": "system_mtls_ca_envoyconfig",
                  "sdsConfig": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  }
                }
              },
              "tlsCertificateSdsSecretConfigs": [
                {
                  "name": "system_mtls_identity_envoyconfig",
                  "sdsConfig": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  }
                }
              ]
            },
            "sni": "a65abe81bca1750d1.demo-client.3000.envoyconfig.ms"
          }
        },
        "type": "EDS",
        "typedExtensionProtocolOptions": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
            "explicitHttpConfig": {
              "http2ProtocolOptions": {}
            }
          }
        }
      },
      "kri_msvc_envoyconfig_kuma-3__test-server_80": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "commonLbConfig": {
          "localityWeightedLbConfig": {}
        },
        "connectTimeout": "5s",
        "edsClusterConfig": {
          "edsConfig": {
            "ads": {},
            "resourceApiVersion": "V3"
          }
        },
        "name": "kri_msvc_envoyconfig_kuma-3__test-server_80",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "alpnProtocols": [
                "kuma"
              ],
              "combinedValidationContext": {
                "defaultValidationContext": {
                  "matchTypedSubjectAltNames": [
                    {
                      "matcher": {
                        "exact": "spiffe://envoyconfig/test-server"
                      },
                      "sanType": "URI"
                    }
                  ]
                },
                "validationContextSdsSecretConfig": {
                  "name": "system_mtls_ca_envoyconfig",
                  "sdsConfig": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  }
                }
              },
              "tlsCertificateSdsSecretConfigs": [
                {
                  "name": "system_mtls_identity_envoyconfig",
                  "sdsConfig": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  }
                }
              ]
            },
            "sni": "a029781856823048e.test-server.80.envoyconfig.ms"
          }
        },
        "type": "EDS",
        "typedExtensionProtocolOptions": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
            "commonHttpProtocolOptions": {
              "idleTimeout": "3600s",
              "maxConnectionDuration": "0s",
              "maxStreamDuration": "0s"
            },
            "explicitHttpConfig": {
              "http2ProtocolOptions": {}
            }
          }
        }
      },
      "self_inbound_dp_3000": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "loadAssignment": {
          "clusterName": "self_inbound_dp_3000",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "IP_REDACTED",
                        "portValue": 3000
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "self_inbound_dp_3000",
        "type": "STATIC",
        "upstreamBindConfig": {
          "sourceAddress": {
            "address": "IP_REDACTED",
            "portValue": 0
          }
        }
      },
      "self_transparentproxy_no_destination_inbound": {
        "altStatName": "self_transparentproxy_no_destination_inbound",
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "name": "self_transparentproxy_no_destination_inbound",
        "type": "STATIC"
      },
      "self_transparentproxy_passthrough_inbound_ipv4": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "lbPolicy": "CLUSTER_PROVIDED",
        "name": "self_transparentproxy_passthrough_inbound_ipv4",
        "type": "ORIGINAL_DST",
        "upstreamBindConfig": {
          "sourceAddress": {
            "address": "IP_REDACTED",
            "portValue": 0
          }
        }
      },
      "self_transparentproxy_passthrough_inbound_ipv6": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "lbPolicy": "CLUSTER_PROVIDED",
        "name": "self_transparentproxy_passthrough_inbound_ipv6",
        "type": "ORIGINAL_DST",
        "upstreamBindConfig": {
          "sourceAddress": {
            "address": "IP_REDACTED",
            "portValue": 0
          }
        }
      },
      "self_transparentproxy_passthrough_outbound_ipv4": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "lbPolicy": "CLUSTER_PROVIDED",
        "name": "self_transparentproxy_passthrough_outbound_ipv4",
        "type": "ORIGINAL_DST"
      },
      "self_transparentproxy_passthrough_outbound_ipv6": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "lbPolicy": "CLUSTER_PROVIDED",
        "name": "self_transparentproxy_passthrough_outbound_ipv6",
        "type": "ORIGINAL_DST"
      },
      "system_envoy_admin": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "loadAssignment": {
          "clusterName": "system_envoy_admin",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "ADMIN_REDACTED",
                        "portValue": 0
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "system_envoy_admin",
        "type": "STATIC"
      },
      "system_probe_readiness": {
        "circuitBreakers": {
          "thresholds": [
            {
              "trackRemaining": true
            }
          ]
        },
        "connectTimeout": "5s",
        "loadAssignment": {
          "clusterName": "system_probe_readiness",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "ADMIN_REDACTED",
                        "portValue": 0
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "system_probe_readiness",
        "type": "STATIC"
      }
    },
    "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment": {
      "kri_msvc_envoyconfig_kuma-3__demo-client_3000": {
        "clusterName": "kri_msvc_envoyconfig_kuma-3__demo-client_3000",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "IP_REDACTED",
                      "portValue": 3000
                    }
                  }
                },
                "loadBalancingWeight": 1,
                "metadata": {
                  "filterMetadata": {
                    "envoy.lb": {
                      "kuma.io/display-name": "demo-client",
                      "kuma.io/env": "universal",
                      "kuma.io/mesh": "envoyconfig",
                      "kuma.io/origin": "zone",
                      "kuma.io/proxy-type": "sidecar",
                      "kuma.io/workload": "demo-client",
                      "kuma.io/zone": "kuma-3",
                      "team": "client-owners"
                    },
                    "envoy.transport_socket_match": {
                      "kuma.io/display-name": "demo-client",
                      "kuma.io/env": "universal",
                      "kuma.io/mesh": "envoyconfig",
                      "kuma.io/origin": "zone",
                      "kuma.io/proxy-type": "sidecar",
                      "kuma.io/workload": "demo-client",
                      "kuma.io/zone": "kuma-3",
                      "team": "client-owners"
                    }
                  }
                }
              }
            ],
            "locality": {
              "zone": "kuma-3"
            }
          }
        ]
      },
      "kri_msvc_envoyconfig_kuma-3__test-server_80": {
        "clusterName": "kri_msvc_envoyconfig_kuma-3__test-server_80",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "IP_REDACTED",
                      "portValue": 80
                    }
                  }
                },
                "loadBalancingWeight": 1,
                "metadata": {
                  "filterMetadata": {
                    "envoy.lb": {
                      "instance": "1",
                      "kuma.io/display-name": "test-server",
                      "kuma.io/env": "universal",
                      "kuma.io/mesh": "envoyconfig",
                      "kuma.io/origin": "zone",
                      "kuma.io/protocol": "http",
                      "kuma.io/proxy-type": "sidecar",
                      "kuma.io/workload": "test-server",
                      "kuma.io/zone": "kuma-3",
                      "team": "server-owners",
                      "version": "v1"
                    },
                    "envoy.transport_socket_match": {
                      "instance": "1",
                      "kuma.io/display-name": "test-server",
                      "kuma.io/env": "universal",
                      "kuma.io/mesh": "envoyconfig",
                      "kuma.io/origin": "zone",
                      "kuma.io/protocol": "http",
                      "kuma.io/proxy-type": "sidecar",
                      "kuma.io/workload": "test-server",
                      "kuma.io/zone": "kuma-3",
                      "team": "server-owners",
                      "version": "v1"
                    }
                  }
                }
              }
            ],
            "loadBalancingWeight": 1,
            "locality": {
              "zone": "kuma-3"
            }
          }
        ],
        "policy": {
          "overprovisioningFactor": 200
        }
      }
    },
    "type.googleapis.com/envoy.config.listener.v3.Listener": {
      "kri_msvc_envoyconfig_kuma-3__demo-client_3000": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 3000
          }
        },
        "bindToPort": false,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "kri_msvc_envoyconfig_kuma-3__demo-client_3000",
                  "idleTimeout": "3600s",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "metadata": {
          "filterMetadata": {
            "io.kuma.tags": {
              "kuma.io/unified-name": "kri_msvc_envoyconfig_kuma-3__demo-client_3000"
            }
          }
        },
        "name": "kri_msvc_envoyconfig_kuma-3__demo-client_3000",
        "statPrefix": "STAT_PREFIX_REDACTED",
        "trafficDirection": "OUTBOUND"
      },
      "kri_msvc_envoyconfig_kuma-3__test-server_80": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 80
          }
        },
        "bindToPort": false,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "commonHttpProtocolOptions": {
                    "idleTimeout": "0s"
                  },
                  "httpFilters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ],
                  "internalAddressConfig": {
                    "cidrRanges": [
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 8
                      },
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 16
                      },
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 12
                      },
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 32
                      }
                    ]
                  },
                  "normalizePath": true,
                  "requestHeadersTimeout": "0s",
                  "routeConfig": {
                    "name": "kri_msvc_envoyconfig_kuma-3__test-server_80",
                    "validateClusters": false,
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "kri_msvc_envoyconfig_kuma-3__test-server_80",
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "name": "9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=",
                            "route": {
                              "cluster": "kri_msvc_envoyconfig_kuma-3__test-server_80",
                              "idleTimeout": "1800s",
                              "timeout": "15s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "metadata": {
          "filterMetadata": {
            "io.kuma.tags": {
              "kuma.io/unified-name": "kri_msvc_envoyconfig_kuma-3__test-server_80"
            }
          }
        },
        "name": "kri_msvc_envoyconfig_kuma-3__test-server_80",
        "statPrefix": "STAT_PREFIX_REDACTED",
        "trafficDirection": "OUTBOUND"
      },
      "self_inbound_dp_3000": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 3000
          }
        },
        "bindToPort": false,
        "enableReusePort": true,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.rbac",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC",
                  "matcher": {
                    "matcherList": {
                      "matchers": [
                        {
                          "onMatch": {
                            "action": {
                              "name": "envoy.filters.rbac.action",
                              "typedConfig": {
                                "@type": "type.googleapis.com/envoy.config.rbac.v3.Action",
                                "name": "kri_mtp_envoyconfig_kuma-3__allow-all-envoyconfig_"
                              }
                            }
                          },
                          "predicate": {
                            "singlePredicate": {
                              "input": {
                                "name": "envoy.matching.inputs.uri_san",
                                "typedConfig": {
                                  "@type": "type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput"
                                }
                              },
                              "valueMatch": {
                                "prefix": "spiffe://envoyconfig"
                              }
                            }
                          }
                        }
                      ]
                    },
                    "onNoMatch": {
                      "action": {
                        "name": "envoy.filters.rbac.action",
                        "typedConfig": {
                          "@type": "type.googleapis.com/envoy.config.rbac.v3.Action",
                          "action": "DENY",
                          "name": "default"
                        }
                      }
                    }
                  },
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              },
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "self_inbound_dp_3000",
                  "idleTimeout": "3600s",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ],
            "transportSocket": {
              "name": "envoy.transport_sockets.tls",
              "typedConfig": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "commonTlsContext": {
                  "combinedValidationContext": {
                    "defaultValidationContext": {
                      "matchTypedSubjectAltNames": [
                        {
                          "matcher": {
                            "prefix": "spiffe://envoyconfig/"
                          },
                          "sanType": "URI"
                        }
                      ]
                    },
                    "validationContextSdsSecretConfig": {
                      "name": "system_mtls_ca_envoyconfig",
                      "sdsConfig": {
                        "ads": {},
                        "resourceApiVersion": "V3"
                      }
                    }
                  },
                  "tlsCertificateSdsSecretConfigs": [
                    {
                      "name": "system_mtls_identity_envoyconfig",
                      "sdsConfig": {
                        "ads": {},
                        "resourceApiVersion": "V3"
                      }
                    }
                  ]
                },
                "requireClientCertificate": true
              }
            }
          }
        ],
        "metadata": {
          "filterMetadata": {
            "io.kuma.tags": {
              "kuma.io/display-name": "demo-client",
              "kuma.io/env": "universal",
              "kuma.io/mesh": "envoyconfig",
              "kuma.io/origin": "zone",
              "kuma.io/proxy-type": "sidecar",
              "kuma.io/workload": "demo-client",
              "kuma.io/zone": "kuma-3",
              "team": "client-owners"
            }
          }
        },
        "name": "self_inbound_dp_3000",
        "statPrefix": "STAT_PREFIX_REDACTED",
        "trafficDirection": "INBOUND"
      },
      "self_transparentproxy_passthrough_inbound_ipv4": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 15006
          }
        },
        "enableReusePort": true,
        "filterChains": [
          {
            "filterChainMatch": {
              "destinationPort": 3000
            },
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "self_transparentproxy_passthrough_inbound_ipv4",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "name": "self_transparentproxy_passthrough_inbound_ipv4",
        "statPrefix": "STAT_PREFIX_REDACTED",
        "trafficDirection": "INBOUND",
        "useOriginalDst": true
      },
      "self_transparentproxy_passthrough_inbound_ipv6": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 15006
          }
        },
        "enableReusePort": true,
        "filterChains": [
          {
            "filterChainMatch": {
              "destinationPort": 3000
            },
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "self_transparentproxy_passthrough_inbound_ipv6",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "name": "self_transparentproxy_passthrough_inbound_ipv6",
        "statPrefix": "STAT_PREFIX_REDACTED",
        "trafficDirection": "INBOUND",
        "useOriginalDst": true
      },
      "self_transparentproxy_passthrough_outbound_ipv4": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 15001
          }
        },
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "self_transparentproxy_passthrough_outbound_ipv4",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "name": "self_transparentproxy_passthrough_outbound_ipv4",
        "statPrefix": "STAT_PREFIX_REDACTED",
        "trafficDirection": "OUTBOUND",
        "useOriginalDst": true
      },
      "self_transparentproxy_passthrough_outbound_ipv6": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 15001
          }
        },
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "self_transparentproxy_passthrough_outbound_ipv6",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "name": "self_transparentproxy_passthrough_outbound_ipv6",
        "statPrefix": "STAT_PREFIX_REDACTED",
        "trafficDirection": "OUTBOUND",
        "useOriginalDst": true
      },
      "system_envoy_admin": {
        "address": {
          "socketAddress": {
            "address": "ADMIN_REDACTED",
            "portValue": 0
          }
        },
        "enableReusePort": true,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "httpFilters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ],
                  "internalAddressConfig": {
                    "cidrRanges": [
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 32
                      }
                    ]
                  },
                  "routeConfig": {
                    "validateClusters": false,
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "system_envoy_admin",
                        "routes": [
                          {
                            "match": {
                              "prefix": "/ready"
                            },
                            "route": {
                              "cluster": "system_probe_readiness",
                              "prefixRewrite": "/ready"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          },
          {
            "filterChainMatch": {
              "transportProtocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "httpFilters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ],
                  "internalAddressConfig": {
                    "cidrRanges": [
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 32
                      }
                    ]
                  },
                  "routeConfig": {
                    "validateClusters": false,
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "system_envoy_admin",
                        "routes": [
                          {
                            "match": {
                              "prefix": "/ready"
                            },
                            "route": {
                              "cluster": "system_probe_readiness",
                              "prefixRewrite": "/ready"
                            }
                          },
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "system_envoy_admin",
                              "prefixRewrite": "/"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ],
            "transportSocket": {
              "name": "envoy.transport_sockets.tls",
              "typedConfig": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "commonTlsContext": {
                  "tlsCertificates": [
                    {
                      "certificateChain": {
                        "inlineBytes": ""
                      },
                      "privateKey": {
                        "inlineBytes": ""
                      }
                    }
                  ],
                  "validationContext": {
                    "matchTypedSubjectAltNames": [
                      {
                        "matcher": {
                          "exact": "kuma-cp"
                        },
                        "sanType": "DNS"
                      }
                    ],
                    "trustedCa": {
                      "inlineBytes": ""
                    }
                  }
                },
                "requireClientCertificate": true
              }
            }
          }
        ],
        "listenerFilters": [
          {
            "name": "envoy.filters.listener.tls_inspector",
            "typedConfig": {
              "@type": "type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
            }
          }
        ],
        "name": "system_envoy_admin",
        "trafficDirection": "INBOUND"
      }
    },
    "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret": {
      "system_mtls_ca_envoyconfig": {
        "name": "system_mtls_ca_envoyconfig",
        "validationContext": {
          "trustedCa": {
            "inlineBytes": "Q0E="
          }
        }
      },
      "system_mtls_identity_envoyconfig": {
        "name": "system_mtls_identity_envoyconfig",
        "tlsCertificate": {
          "certificateChain": {
            "inlineBytes": "Q0VSVA=="
          },
          "privateKey": {
            "inlineBytes": "S0VZ"
          }
        }
      }
    }
  }
}
